--- a/WpfApplication8/MainWindow.xaml
+++ b/WpfApplication8/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Canvas x:Name="canvas" HorizontalAlignment="Left" Height="180" Margin="159,10,0,0" VerticalAlignment="Top" Width="174" Background="#FFB2ADAD"/>
+        <Button x:Name="button" Content="Draw" HorizontalAlignment="Left" Margin="28,28,0,0" VerticalAlignment="Top" Width="75" Click="drawButton_Click"/>
+
     </Grid>
 </Window>
